--- a/smartAdmin/smartAdmin/templates/userManageList.html
+++ b/smartAdmin/smartAdmin/templates/userManageList.html
@@ -203,7 +203,15 @@
        	 	"bServerSide": true,
         	"bStateSave": true,
         	"sAjaxSource": USERS_LIST_JSON_URL,
-        	
+        	 "aoColumns": [
+                        { "bSortable": true, "bSearchable": true, "sClass": "center" },
+                        { "bSortable": true, "bSearchable": true, "sClass": "center" },
+                        { "bSortable": true, "bSearchable": true, "sClass": "center" },
+                        { "bSortable": true, "bSearchable": true, "sClass": "center" },
+                        { "bSortable": true, "bSearchable": true, "sClass": "center" },
+                        { "bSortable": true, "bSearchable": true, "sClass": "center" },
+                        { "bSortable": true, "bSearchable": true, "sClass": "center" },
+                        ],
         					
 			});
 
