--- a/smartAdmin/smartAdmin/templates/index.html
+++ b/smartAdmin/smartAdmin/templates/index.html
@@ -117,14 +117,14 @@
 					<!-- the ID links are fetched via AJAX to the ajax container "ajax-notifications" -->
 					<div class="btn-group btn-group-justified" data-toggle="buttons">
 						<label class="btn btn-default">
-							<input type="radio" name="activity" id="ajax/notify/mail.html">
-							Msgs (14) </label>
+							<input type="radio" name="activity" id="static/ajax/notify/mail.html">
+							Msgs  </label>
 						<label class="btn btn-default">
-							<input type="radio" name="activity" id="ajax/notify/notifications.html">
-							notify (3) </label>
+							<input type="radio" name="activity" id="notify">
+							notify  </label>
 						<label class="btn btn-default">
-							<input type="radio" name="activity" id="ajax/notify/tasks.html">
-							Tasks (4) </label>
+							<input type="radio" name="activity" id="static/ajax/notify/tasks.html">
+							Tasks  </label>
 					</div>
 
 					<!-- notification content -->
@@ -291,7 +291,7 @@
 					<a href="javascript:void(0);" id="show-shortcut" data-action="toggleShortcut">
 						<img src="static/img/avatars/sunny.png" alt="me" class="online" /> 
 						<span>
-							孙亚柯
+						孙亚柯
 						</span>
 						<i class="fa fa-angle-down"></i>
 					</a> 
