--- a/smartAdmin/smartAdmin/templates/newFriend.html
+++ b/smartAdmin/smartAdmin/templates/newFriend.html
@@ -84,7 +84,7 @@
 									<th data-hide="phone,tablet"><i class="fa fa-fw fa-map-marker txt-color-blue hidden-md hidden-sm hidden-xs"></i> Email</th>
 									<th data-hide="phone,tablet">Gender</th>
 									<th data-hide="phone,tablet"><i class="fa fa-fw fa-calendar txt-color-blue hidden-md hidden-sm hidden-xs"></i> Birthday</th>
-									
+									<th data-hide="phone,tablet"><i class="fa fa-fw fa-calendar txt-color-blue hidden-md hidden-sm hidden-xs"></i> Options</th>
 								</tr>
 
 							</thead>
@@ -185,7 +185,7 @@
 				phone : 480
 			};
 
-			 var USERS_LIST_JSON_URL = '{% url "users_list_json" %}';
+			 var USERS_LIST_JSON_URL = '{% url "unfriend_list_json" %}';
     
        
 
@@ -211,18 +211,12 @@
                         { "bSortable": true, "bSearchable": true, "sClass": "center" },
                         { "bSortable": true, "bSearchable": true, "sClass": "center" },
                         { "bSortable": true, "bSearchable": true, "sClass": "center" },
-                        { "bSortable": true, "bSearchable": true, "sClass": "center",
-                        	"render":function(odata){
-                        		if(odata=='m'){
-										return '男';
-                        		}else if(odata=='f'){
-                        			return '女';
-                        		}
-                        	
-
-                        } },
                         { "bSortable": true, "bSearchable": true, "sClass": "center" },
-                       
+                        { "bSortable": true, "bSearchable": true, "sClass": "center" },
+                        {"render":function(odata){
+                        	return '<input onclick="javascript:{window.location.href=\'#invite/'+odata+'\'}" class="btn  btn-success btn-xs btn-block" type="button" value="Invite">'
+
+                        }},
                         ],
         					
 			});
