更改代码格式

--- a/smartAdmin/smartAdmin/templates/userManageList.html
+++ b/smartAdmin/smartAdmin/templates/userManageList.html
@@ -221,9 +221,9 @@
                         	
 
                         } },
-                        { "bSortable": true, "bSearchable": true, "sClass": "center" },
+                        { "bSortable": true, "bSearchable": true, "sClass": "center" }
                        
-                        ],
+                        ]
         					
 			});
 
