我的小组，topic，reply post

--- a/smartAdmin/smartAdmin/templates/index.html
+++ b/smartAdmin/smartAdmin/templates/index.html
@@ -323,6 +323,9 @@
 					<li>
 						<a href="myFriend"><i class="fa fa-lg fa-fw fa-inbox"></i> <span class="menu-item-parent">我的好友</span></a>
 					</li>
+                    <li>
+						<a href="group"><i class="fa fa-lg fa-fw fa-inbox"></i> <span class="menu-item-parent">我的小组</span></a>
+					</li>
 					<li>
 						<a href="#"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> <span class="menu-item-parent">图标</span></a>
 						<ul>
