--- a/smartAdmin/groupManage/templates/topic.html
+++ b/smartAdmin/groupManage/templates/topic.html
@@ -1,43 +1,6 @@
 <!-- Bread crumb is created dynamically -->
 <!-- row -->
-<div class="row">
 
-	<!-- col -->
-	<div class="col-xs-12 col-sm-7 col-md-7 col-lg-4">
-		<h1 class="page-title txt-color-blueDark"><!-- PAGE HEADER --><i class="fa-fw fa fa-file-o"></i> Forum Layout<span>>
-			Post View </span></h1>
-	</div>
-	<!-- end col -->
-
-	<!-- right side of the page with the sparkline graphs -->
-	<!-- col -->
-	<div class="col-xs-12 col-sm-5 col-md-5 col-lg-8">
-		<!-- sparks -->
-		<ul id="sparks">
-			<li class="sparks-info">
-				<h5> My Income <span class="txt-color-blue">$47,171</span></h5>
-				<div class="sparkline txt-color-blue hidden-mobile hidden-md hidden-sm">
-					1300, 1877, 2500, 2577, 2000, 2100, 3000, 2700, 3631, 2471, 2700, 3631, 2471
-				</div>
-			</li>
-			<li class="sparks-info">
-				<h5> Site Traffic <span class="txt-color-purple"><i class="fa fa-arrow-circle-up" data-rel="bootstrap-tooltip" title="Increased"></i>&nbsp;45%</span></h5>
-				<div class="sparkline txt-color-purple hidden-mobile hidden-md hidden-sm">
-					110,150,300,130,400,240,220,310,220,300, 270, 210
-				</div>
-			</li>
-			<li class="sparks-info">
-				<h5> Site Orders <span class="txt-color-greenDark"><i class="fa fa-shopping-cart"></i>&nbsp;2447</span></h5>
-				<div class="sparkline txt-color-greenDark hidden-mobile hidden-md hidden-sm">
-					110,150,300,130,400,240,220,310,220,300, 270, 210
-				</div>
-			</li>
-		</ul>
-		<!-- end sparks -->
-	</div>
-	<!-- end col -->
-
-</div>
 <!-- end row -->
 
 <!--
@@ -46,31 +9,77 @@ You do not need to use widgets if you dont want to. Simply remove
 the <section></section> and you can use wells or panels instead
 -->
 
+<!-- widget grid -->
+<section id="widget-grid" class="">
+
+	<!-- row -->
+	<div class="row">
+
+		<!-- NEW WIDGET START -->
+		<article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+			<!-- Widget ID (each widget will need unique ID)-->
+			<div class="jarviswidget" id="wid-id-10" data-widget-editbutton="false">
+				<!-- widget options:
+				usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
+
+				data-widget-colorbutton="false"
+				data-widget-editbutton="false"
+				data-widget-togglebutton="false"
+				data-widget-deletebutton="false"
+				data-widget-fullscreenbutton="false"
+				data-widget-custombutton="false"
+				data-widget-collapsed="true"
+				data-widget-sortable="false"
+
+				-->
+				<header>
+                   <h2><a href="#group"> 我的小组话题 </a> > <a href="#group/{{ topic.group.id }}">{{ topic.group.groupName }} </a> > {{ topic.title }}</h2>
+					<div class="widget-toolbar">
+                        <a href="#newfriend">添加好友</a>
+
+					</div>
+				</header>
+
+				<!-- widget div-->
+				<div>
+
+					<!-- widget edit box -->
+					<div class="jarviswidget-editbox">
+						<!-- This area used as dropdown edit box -->
+
+					</div>
+					<!-- end widget edit box -->
+
+					<!-- widget content -->
+					<div class="widget-body no-padding">
+
+
 <!-- row -->
 <div class="row">
 
-	<div class="col-sm-12">
+    <div class="col-sm-12">
 
-		<div class="well">
+        <div class="well">
 
-			<table class="table table-striped table-forum">
-				<thead>
+            <table class="table table-striped table-forum">
+                <thead>
                     <tr>
                         <th colspan="2">
-                        	<a href="#ajax/forum.html"> 我的小组 </a> > <a href="#ajax/forum-topic.html">{{ topic.group.groupName }} </a> > {{ topic.title }}
+
                         </th>
                     </tr>
                 </thead>
-				<tbody>
-					<!-- Post -->
-					<tr>
+                <tbody>
+                    <!-- Post -->
+                    <tr>
                         <td class="text-center">
-                        	<a href="#ajax/profile.html"><img src="static/img/blank.gif" class="flag flag-us" alt="United States"> &nbsp;
-                        	<strong>{{ topic.creatUser.username }}</strong></a>
+                            <a href="#ajax/profile.html"><img src="static/img/blank.gif" class="flag flag-us" alt="United States"> &nbsp;
+                            <strong>{{ topic.creatUser.username }}</strong></a>
                         </td>
                         <td>on <em>{{ topic.creatTime }}</em></td>
                     </tr>
-					<tr>
+                    <tr>
                         <td class="text-center" style="width: 12%;">
                             <div class="push-bit">
                                 <a href="#ajax/profile.html">
@@ -86,25 +95,25 @@ the <section></section> and you can use wells or panels instead
 
 
 
-							<em>- {{ topic.creatUser.username }} </em>
+                            <em>- {{ topic.creatUser.username }} </em>
                         </td>
                     </tr>
-					<!-- end Post -->
+                    <!-- end Post -->
 
                     {%for reply in replyList%}
-                        	<!-- Post -->
-					<tr>
+                            <!-- Post -->
+                    <tr>
                         <td class="text-center">
-                        	<a href="#ajax/profile.html"><img src="static/img/blank.gif" class="flag flag-fr" alt="France"> &nbsp;
-                        	<strong>{{ reply.replyUser.username }}</strong></a>
+                            <a href="#ajax/profile.html"><img src="static/img/blank.gif" class="flag flag-fr" alt="France"> &nbsp;
+                            <strong>{{ reply.replyUser.username }}</strong></a>
                         </td>
                         <td>on <em>{{ reply.replyTime }}</em></td>
                     </tr>
-					<tr>
+                    <tr>
                         <td class="text-center" style="width: 12%;">
                             <div class="push-bit">
                                 <a href="#ajax/profile.html">
-                                    <img src="static/img/avatars/5.png" width="50" alt="avatar" class="offline">
+                                    <img src="static/img/avatars/1.png" width="50" alt="avatar" class="offline">
                                 </a>
                             </div>
                             <small>473 Posts</small>
@@ -118,21 +127,21 @@ the <section></section> and you can use wells or panels instead
 
                         </td>
                     </tr>
-					<!-- end Post -->
+                    <!-- end Post -->
 
                     {% endfor %}
 
 
 
-					<!-- Post -->
-					<tr>
+                    <!-- Post -->
+                    <tr>
                         <td class="text-center">
-                        	<a href="#ajax/profile.html"><img src="static/img/blank.gif" class="flag flag-us" alt="United States"> &nbsp;
-                        	<strong>Me</strong></a>
+                            <a href="#ajax/profile.html"><img src="static/img/blank.gif" class="flag flag-us" alt="United States"> &nbsp;
+                            <strong>Me</strong></a>
                         </td>
                         <td><em>Today</em></td>
                     </tr>
-					<tr>
+                    <tr>
                         <td class="text-center" style="width: 12%;">
                             <div class="push-bit">
                                 <a href="#ajax/profile.html">
@@ -143,18 +152,18 @@ the <section></section> and you can use wells or panels instead
                         </td>
                         <td>
 
-                        	<div id="forumPost"></div>
-                			<button class="btn btn-primary margin-top-10" onclick=postTopic({{ topic.id }})>Post</button>
-                			<button class="btn btn-success margin-top-10">Save for later</button>
+                            <div id="forumPost"></div>
+                            <button class="btn btn-primary margin-top-10" onclick=postTopic({{ topic.id }})>Post</button>
+                            <button class="btn btn-success margin-top-10">Save for later</button>
 
                         </td>
                     </tr>
-					<!-- end Post -->
+                    <!-- end Post -->
 
-				</tbody>
-			</table>
+                </tbody>
+            </table>
 
-			<div class="text-center">
+            <div class="text-center">
                 <ul class="pagination pagination-sm">
                     <li class="disabled"><a href="javascript:void(0);">Prev</a></li>
                     <li class="active"><a href="javascript:void(0);">1</a></li>
@@ -166,11 +175,45 @@ the <section></section> and you can use wells or panels instead
                 </ul>
             </div>
 
-		</div>
-	</div>
+        </div>
+    </div>
 
 </div>
 
+
+
+
+
+
+
+
+					</div>
+					<!-- end widget content -->
+
+				</div>
+				<!-- end widget div -->
+
+			</div>
+			<!-- end widget -->
+
+
+			<!-- end widget -->
+
+
+			<!-- end widget -->
+
+
+
+		</article>
+		<!-- WIDGET END -->
+
+	</div>
+
+	<!-- end row -->
+
+	<!-- end row -->
+
+</section>
 <!-- end row -->
 
 <!-- row -->
