--- a/smartAdmin/groupManage/templates/group.html
+++ b/smartAdmin/groupManage/templates/group.html
@@ -30,7 +30,7 @@
 				<header>
                    <h2><a href="#group"> 我的小组话题 </a>> <a href="#ajax/forum-topic.html">{{ group.groupName }} </a></h2>
 					<div class="widget-toolbar">
-                        <a href="#newfriend"><span class="glyphicon glyphicon-plus"></span>发言</a>
+                        <a href="#group/postTopic/{{ group.id }}"><span class="glyphicon glyphicon-plus"></span>发言</a>
 
 					</div>
 				</header>
@@ -94,11 +94,11 @@
         <div class="text-center">
             <ul class="pager">
                 {% if groupDiscussList.has_previous %}
-                    <li class="previous"><a href="#group/discuss?page={{ groupDiscussList.previous_page_number }}">&larr; Newer</a></li>
+                    <li class="previous"><a href="#group?page={{ groupDiscussList.previous_page_number }}">&larr; Newer</a></li>
                 {% endif %}
                 Page {{ groupDiscussList.number }} of {{ groupDiscussList.paginator.num_pages }}.
                 {% if groupDiscussList.has_next %}
-                    <li class="next"><a href="#group/discuss?page={{ groupDiscussList.next_page_number }}">Older &rarr;</a></li>
+                    <li class="next"><a href="#group?page={{ groupDiscussList.next_page_number }}">Older &rarr;</a></li>
                 {% endif %}
             </ul>
         </div>
